# tt

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
tt/: __init__.py  cli.py  config.py  db.py  pomodoro.py  tasks.py  time_entries.py  timeparse.py  tui.py
ttx/: cli.py  time_entries.py
