[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tt"
version = "1.0.0"
description = "Tiny tasks + time tracker (CLI + TUI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Martin"}]

dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "textual>=0.58.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.1",
  "ruff>=0.5.7",
  "mypy>=1.11.1",
]

[project.scripts]
tt = "tt.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tt"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
# Ensure build tools are present, then build
build_command = "python -m pip install -U build hatchling && python -m build"
upload_to_pypi = false
tag_format = "v{version}"
commit_parser = "angular"

